# pg-operator

./: .gitignore  Dockerfile  Dockerfile.builder  Justfile  README.md  pyproject.toml
.github/workflows/: main.yaml
a_light/pg_operator/: __init__.py  configuration.py
k8s/base/: config.json  deployment.yaml  kustomization.yaml  rbac.yaml
k8s/dev/: kustomization.yaml
k8s/product/: kustomization.yaml
